@@ -191,7 +191,7 @@
         <spring-security.version>5.5.0</spring-security.version>
         <text.version>1.9</text.version>
         <transaction-api.version>1.3.3</transaction-api.version>
-        <tomcat.version>9.0.44</tomcat.version>
+        <tomcat.version>9.0.46</tomcat.version>
         <wrapper.version>3.2.3</wrapper.version>
         <xpp3_min.version>1.1.4c</xpp3_min.version>
         <xstream.version>1.4.17</xstream.version>
@@ -218,7 +218,7 @@
         <jar.plugin>3.2.0</jar.plugin>
         <javadoc.plugin>3.3.0</javadoc.plugin>
         <jdeps.plugin>3.1.2</jdeps.plugin>
-        <jspc.plugin>9.4.38.v20210224</jspc.plugin>
+        <jspc.plugin>9.4.41.v20210516</jspc.plugin>
         <jxr.plugin>3.1.1</jxr.plugin>
         <l10n.plugin>1.8</l10n.plugin>
         <license.plugin>4.1</license.plugin>
@@ -226,7 +226,7 @@
         <modernizer.plugin>2.2.0</modernizer.plugin>
         <pmd.plugin>3.14.0</pmd.plugin>
         <project-info.plugin>3.1.2</project-info.plugin>
-        <release.plugin>2.5.3</release.plugin>
+        <release.plugin>3.0.0-M4</release.plugin>
         <resources.plugin>3.2.0</resources.plugin>
         <site.plugin>3.9.1</site.plugin>
         <sonar.plugin>3.9.0.2155</sonar.plugin>
@@ -250,6 +250,9 @@
 
         <!-- Plugin Extensions -->
         <wagon-ssh.version>3.4.3</wagon-ssh.version>
+
+        <!-- Verification Checks -->
+        <error-prone.failOnViolations>-XepAllErrorsAsWarnings</error-prone.failOnViolations>
     </properties>
 
     <dependencyManagement>
@@ -866,6 +869,19 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${compiler.plugin}</version>
                     <configuration>
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>com.google.errorprone</groupId>
+                                <artifactId>error_prone_core</artifactId>
+                                <version>${error-prone.version}</version>
+                            </path>
+                        </annotationProcessorPaths>
+
+                        <compilerArgs>
+                            <arg>-XDcompilePolicy=simple</arg>
+                            <arg>-Xplugin:ErrorProne ${error-prone.failOnViolations}</arg>
+                        </compilerArgs>
+
                         <showDeprecation>true</showDeprecation>
                         <showWarnings>true</showWarnings>
 
@@ -1374,6 +1390,14 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <!-- Skip license plugin during release as maven release is now shallow cloned -->
+                    <plugin>
+                        <groupId>com.mycila</groupId>
+                        <artifactId>license-maven-plugin</artifactId>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
@@ -1408,37 +1432,6 @@
                         </executions>
                     </plugin>
                 </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>error-prone</id>
-            <activation>
-                <jdk>[1.8,12)</jdk>
-            </activation>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-compiler-plugin</artifactId>
-                            <configuration>
-                                <annotationProcessorPaths>
-                                    <path>
-                                        <groupId>com.google.errorprone</groupId>
-                                        <artifactId>error_prone_core</artifactId>
-                                        <version>${error-prone.version}</version>
-                                    </path>
-                                </annotationProcessorPaths>
-
-                                <compilerArgs>
-                                    <arg>-XDcompilePolicy=simple</arg>
-                                    <arg>-Xplugin:ErrorProne -Xep:Finally:OFF</arg>
-                                </compilerArgs>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
             </build>
         </profile>
 
@@ -1534,6 +1527,39 @@
                                         <X-Compile-Release-JDK>${maven.compiler.release}</X-Compile-Release-JDK>
                                     </manifestEntries>
                                 </archive>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
+
+        <profile>
+            <id>jdk16on</id>
+            <activation>
+                <jdk>[16,)</jdk>
+            </activation>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <configuration>
+                                <fork>true</fork>
+                                <compilerArgs combine.children="append">
+                                    <!-- Error Prone Needs -->
+                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                                </compilerArgs>
                             </configuration>
                         </plugin>
                     </plugins>
